# bedrock-ide

./: AUTHORS  BEDROCK_IDE_API.md  BUGS  ChangeLog  HACKING  HINTS.md  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  TODO.md  aclocal.m4  bedrock-ide.spec.in  bootstrap  configure  configure.ac  directories.inc
autotools/: ads_PERL_INCLUDES.m4  ads_PERL_LIBDIR.m4  ads_PERL_MODULE.m4  ads_PROG_PERL.m4  apache_config.m4
src/: Makefile.in
src/main/: Makefile.am  Makefile.in
src/main/bash/: Makefile.in
src/main/bedrock/: Makefile.am  Makefile.in
src/main/bedrock/config/: Makefile.am  Makefile.in  bedrock-ide.xml.in  perl_bedrock-ide.conf.in
src/main/bedrock/css/: Makefile.am  Makefile.in  bedrock-ide.css  bedrock-mode.css  main.css
src/main/bedrock/htdocs/: Makefile.am  Makefile.in  index.roc
src/main/bedrock/img/: Makefile  Makefile.am  Makefile.in
src/main/bedrock/javascript/: Makefile.am  Makefile.in  bedrock-ide.js  main.js  mode-bedrock.js  mode-perl.js  theme-eclipse.js  theme-solarized_dark.js  theme-xcode.js  worker-bedrock.js
src/main/bedrock/javascript/snippets/: bedrock.js
src/main/perl/: Makefile.in
src/main/perl/lib/: Bedrock::API.pm.in  Makefile.am  Makefile.in
src/main/perl/lib/Bedrock/: IDE.pm.in
src/main/perl/lib/Bedrock/IDE/: API.pm.in  Config.pm.in  Docs.pm.in  Trapper.pm.in
