SUBDIRS = .

include $(top_srcdir)/directories.inc

dist_css_DATA = \
    bedrock-ide.css \
    font-awesome.min.css \
    font-awesome.css

dist_fontawesome_fonts_DATA = \
    fonts/FontAwesome.otf \
    fonts/fontawesome-webfont.eot \
    fonts/fontawesome-webfont.svg \
    fonts/fontawesome-webfont.ttf \
    fonts/fontawesome-webfont.woff \
    fonts/fontawesome-webfont.woff2
