SUBDIRS = .

include $(top_srcdir)/directories.inc

dist_snippets_DATA = \
    snippets/bedrock.js \
    snippets/css.js \
    snippets/html.js \
    snippets/javascript.js \
    snippets/json.js \
    snippets/perl.js \
    snippets/plain_text.js \
    snippets/sh.js \
    snippets/text.js \
    snippets/xml.js

dist_javascript_DATA = \
    ace.js \
    bedrock-ide.js \
    ext-beautify.js \
    ext-chromevox.js \
    ext-elastic_tabstops_lite.js \
    ext-emmet.js \
    ext-error_marker.js \
    ext-keybinding_menu.js \
    ext-language_tools.js \
    ext-linking.js \
    ext-modelist.js \
    ext-old_ie.js \
    ext-searchbox.js \
    ext-settings_menu.js \
    ext-spellcheck.js \
    ext-split.js \
    ext-static_highlight.js \
    ext-statusbar.js \
    ext-textarea.js \
    ext-themelist.js \
    ext-whitespace.js \
    keybinding-emacs.js \
    keybinding-vim.js \
    main.js \
    mode-bedrock.js \
    mode-css.js \
    mode-html.js \
    mode-javascript.js \
    mode-json.js \
    mode-perl.js \
    mode-plain_text.js \
    mode-sh.js \
    mode-text.js \
    mode-xml.js \
    theme-chrome.js \
    worker-bedrock.js \
    worker-css.js \
    worker-html.js \
    worker-javascript.js \
    worker-json.js \
    worker-xml.js

all:
